fix/ menuhamburguer overflowing x

--- a/src/components/molecules/menuhamburguer/menuhamburguer.module.scss
+++ b/src/components/molecules/menuhamburguer/menuhamburguer.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  width: 100vw;
+  width: 100%;
   grid-template-areas:
     ". . . . . . . . . ."
     ". bk . . . . . . menu ."
